# pushit

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  error.rs  main.rs  paths.rs  profile.rs
src/commands/: mod.rs  profile.rs  send.rs
src/service/: mod.rs  pushover.rs
