[package]
name = "pushit"
version = "0.1.1"
edition = "2024"
authors = ["Collin Dutrow"]
description = "A small, cross-platform command-line tool for sending push notifications."
homepage = "https://github.com/collindutrow"
repository = "https://github.com/collindutrow/pushit"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ureq = "3.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ron = "0.12.1"
